yiltc/testsuite/negative/non_bool_condition.yilt
fn foo()
    if 42
        print("nope")
